scrollbar fix

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,3 +20,7 @@ $fa-font-path: '../webfonts';
     font-family: 'Mona Sans', sans-serif;
    
   }
+
+  body::-webkit-scrollbar{
+    display: none;
+  }
